[gd_scene load_steps=16 format=3 uid="uid://cvfowrv5jjhy6"]

[ext_resource type="Texture2D" uid="uid://b2yik63rgc8ga" path="res://level/ui/button_passive_currency/assets/black.png" id="1_8uvpb"]
[ext_resource type="Script" uid="uid://bf62ksiyrkref" path="res://level/ui/button_passive_currency/button_passive_currency.gd" id="1_ddns0"]
[ext_resource type="Texture2D" uid="uid://b2eb3p3we0ceb" path="res://level/ui/button_passive_currency/assets/red.png" id="2_pxgm0"]
[ext_resource type="PackedScene" uid="uid://c8hkdjfnbm3a3" path="res://level/ui/payout_indicator/payout_indicator.tscn" id="4_pxgm0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uvpb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pxgm0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x6hko"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ym0qu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16wof"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knhlg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gvfbh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mq734"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jen3l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xbpw8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48mc4"]

[node name="ButtonPassiveCurrency" type="TextureProgressBar"]
offset_right = 103.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 5.0
texture_under = ExtResource("1_8uvpb")
texture_progress = ExtResource("2_pxgm0")
script = ExtResource("1_ddns0")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_8uvpb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_pxgm0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_x6hko")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ym0qu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_16wof")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_knhlg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gvfbh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mq734")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jen3l")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_xbpw8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_48mc4")
text = "COLLECT"

[node name="PayoutIndicator" parent="." instance=ExtResource("4_pxgm0")]
unique_name_in_owner = true
layout_mode = 1
offset_left = -0.5
offset_top = -11.0
offset_right = -0.5
offset_bottom = -11.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
